change content-wrap bottom padding to fix mb display

--- a/static/contacto.css
+++ b/static/contacto.css
@@ -10,7 +10,7 @@ body
 }
 #content-wrap
 {
-    padding-bottom:2.5rem;
+    padding-bottom:7.5rem;
 }
 header
 {
